--- a/SIGS/app/views/administrative_assistant/show.html.erb
+++ b/SIGS/app/views/administrative_assistant/show.html.erb
@@ -1,2 +1,13 @@
-<h1>AdministrativeAssistant#show</h1>
-<p>Find me in app/views/administrative_assistant/show.html.erb</p>
+<h1><%= @user.name %></h1>
+
+<p><b>Tipo de Conta:</b> Assistente Administrativo</p>
+<p><b>CPF: </b><%= @user.cpf %></p>
+<p><b>Email: </b><%= @user.email %></p>
+<p><b>Registro: </b><%= @user.registration %></p>
+<% if @user.active %>
+  <p><b>Status:</b> Aprovado</p>
+<% else %>
+  <p><b>Status:</b> Não Aprovado</p>
+<% end %>
+<br>
+<p><%= link_to 'deletar', adm_remove_path %></p
