Create administrative assistant actions

--- a/SIGS/app/views/administrative_assistant/edit_users.html.erb
+++ b/SIGS/app/views/administrative_assistant/edit_users.html.erb
@@ -1,2 +1,3 @@
-<h1>AdministrativeAssistant#edit_users</h1>
-<p>Find me in app/views/administrative_assistant/edit_users.html.erb</p>
+<h1> Editando Usuario <h1>
+
+<%= render 'layouts/admForm' %>
