--- a/SIGS/app/views/administrative_assistant/show.html.erb
+++ b/SIGS/app/views/administrative_assistant/show.html.erb
@@ -10,4 +10,5 @@
   <p><b>Status:</b> Não Aprovado</p>
 <% end %>
 <br>
-<p><%= link_to 'deletar', adm_remove_path %></p
+<p><%= link_to 'deletar', adm_remove_path %></p>
+ 
