--- a/SIGS/app/views/administrative_assistant/registration_request.html.erb
+++ b/SIGS/app/views/administrative_assistant/registration_request.html.erb
@@ -1,16 +1,2 @@
-<table>
-  <tr>
-    <th>Nome</th>
-    <th>Email</th>
-    <th>CPF</th>
-    <th>Matricula</th>
-  </tr>
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.name%></td>
-    <td><%= user.email%></td>
-    <td><%= user.cpf %></td>
-    <td><%= user.registration %></td>
-  </tr>
-<% end %>
-</table>
+<h1>AdministrativeAssistant#registration_request</h1>
+<p>Find me in app/views/administrative_assistant/registration_request.html.erb</p>
