Add create and new actions in user controller

--- a/SIGS/app/views/user/new.html.erb
+++ b/SIGS/app/views/user/new.html.erb
@@ -1,2 +1,15 @@
-<h1>User#new</h1>
-<p>Find me in app/views/user/new.html.erb</p>
+<p> Criando usuário </p>
+<%= form_for (:user,url: user_create_path, method: :post do |f| %>
+  <%= f.label  'Nome' %>
+  <%= f.text_field(:name,size: 20) %><br>
+  <%= f.label 'Email' %>
+  <%= f.text_field(:email,size: 20) %><br>
+  <%= f.label 'CPF' %>
+  <%= f.text_field(:cpf,size:11) %> <br>
+  <%= f.label 'Matrícula' %>
+  <%= f.text_field(:registration,size:20) %> <br>
+
+    <%= f.submit 'enviar'%>
+
+
+<% end %>
