--- a/SIGS/app/views/user/new.html.erb
+++ b/SIGS/app/views/user/new.html.erb
@@ -2,7 +2,7 @@
   <div class="panel panel-primary">
     <div class="panel-heading">Solicitação de Cadastro</div>
     <div class="panel-body">
-      <%= form_for user_new_path, :html => {:role => 'form'} do |f| %>
+      <%= form_for @user, url: user_create_path,  :html => {:role => 'form'} do |f| %>
         <%= f.hidden_field :active, :value => 'false' %>
         <div class="col-sm-6">
 
@@ -16,15 +16,16 @@
             <%= f.text_field :email, class: 'form-control', placeholder: 'Digite seu e-mail' %>
           </div>
 
-          <div class="form-group">
-            <%= f.label :confirm_email, "Confirmar e-mail: " %>
-            <%= f.text_field :confirm_email, class: 'form-control', placeholder: 'Confirme seu e-mail' %>
-          </div>
+          <!-- <div class="form-group">
+            <%#= f.label :confirm_email, "Confirmar e-mail: " %>
+            <%#= f.text_field :confirm_email, class: 'form-control', placeholder: 'Confirme seu e-mail' %>
+          </div> -->
 
           <div class="form-group">
             <%= f.label :cpf, "CPF: " %>
             <%= f.text_field :cpf, class: 'form-control', placeholder: 'Digite seu CPF' %>
           </div>
+
 
         </div>
         <div class="col-sm-6">
@@ -34,10 +35,10 @@
             <%= f.text_field :registration, class: 'form-control', placeholder: 'Digite sua matrícula' %>
           </div>
 
-          <div class="form-group">
-            <%= f.label "Tipo: " %>
-            <%= f.select :tipo, [['Coordenador', 'coordinator'], ['Assistente Administrativo', 'administrative_assistant'], ['Assistente do Departamento', 'department_assistant']], {}, { :class => 'form-control' } %>
-          </div>
+          <!-- <div class="form-group">
+            <%#= f.label "Tipo: " %>
+            <%#= f.select :tipo, [['Coordenador', 'coordinator'], ['Assistente Administrativo', 'administrative_assistant'], ['Assistente do Departamento', 'department_assistant']], {}, { :class => 'form-control' } %>
+          </div> -->
 
           <div class="form-group">
             <%= f.label :password, "Senha: " %>
@@ -55,4 +56,4 @@
       <% end %>
     </div>
   </div>
-</div
+</div>
