--- a/SIGS/app/views/user/new.html.erb
+++ b/SIGS/app/views/user/new.html.erb
@@ -16,10 +16,12 @@
             <%= f.text_field :email, class: 'form-control', placeholder: 'Digite seu e-mail' %>
           </div>
 
-          <!-- <div class="form-group">
-            <%#= f.label :confirm_email, "Confirmar e-mail: " %>
-            <%#= f.text_field :confirm_email, class: 'form-control', placeholder: 'Confirme seu e-mail' %>
-          </div> -->
+          <!-- Input HTML -->
+          <div class="form-group">
+            <label for="confirm_email">Confirmar E-mail: </label>
+            <input type="text" name="confirm_email" id="confirm_email" class= "form-control" placeholder= "Digite seu e-mail novamente"/>
+          </div>
+          <!-- Input HTML -->
 
           <div class="form-group">
             <%= f.label :cpf, "CPF: " %>
@@ -45,10 +47,12 @@
             <%= f.password_field :password, class: 'form-control', placeholder: 'Digite sua senha' %>
           </div>
 
+          <!-- Input HTML -->
           <div class="form-group">
-            <%= f.label :confirm_password, "Confirmar Senha: " %>
-            <%= f.password_field :confirm_password, class: 'form-control', placeholder: 'Confirme sua senha' %>
+            <label for="confirm_password">Confirmar Senha: </label>
+            <input type="text" name="confirm_password" id="confirm_password" class= "form-control" placeholder= "Confirme sua senha"/>
           </div>
+          <!-- Input HTML -->
 
           <%= f.submit "Enviar", class: 'pull-right btn btn-default btn-success' %>
         </div>
