Script to hidden dropdowns fields

--- a/SIGS/app/views/user/new.html.erb
+++ b/SIGS/app/views/user/new.html.erb
@@ -31,11 +31,11 @@
       </div>
 
       <div id="type">
-        <input type="radio" name="type" value="administrative_assistant" checked class="office">
+        <input type="radio" name="type" value="administrative_assistant" checked>
         <label>Assistente Administrativo</label> <br>
-        <input type="radio" name="type" value="department_assistant" class="office">
+        <input type="radio" name="type" value="department_assistant">
         <label> Auxiliar de Departamento</label> <br>
-        <input type="radio" name="type" value="coordinator" class="office">
+        <input type="radio" name="type" value="coordinator">
         <label>Coordenador de curso</label><br>
       </div>
 
