--- a/SIGS/app/assets/stylesheets/style.scss
+++ b/SIGS/app/assets/stylesheets/style.scss
@@ -55,10 +55,13 @@
   justify-content: space-between;
 }
 
+.flexColumn {
+  flex-direction: column;
+}
+
 .alignEnd {
   align-items: flex-end;
 }
-
 
 /* Fontes */
 
