--- a/SIGS/app/assets/stylesheets/singIn.scss
+++ b/SIGS/app/assets/stylesheets/singIn.scss
@@ -15,17 +15,26 @@
   width: 100vw;
   min-height: 100vh;
 
-  .login {
+  .login,
+  .singUp {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 400px;
     min-height: 100vh;
     padding: 30px;
     padding-top: 50px;
     margin:auto;
     background-color: rgba(0,0,0,0.9);
     text-align: center;
+    overflow: hidden;
+  }
+
+  .login {
+    max-width: 400px;
+  }
+
+  .singUp {
+    max-width: 400px;
   }
 
   h1 {
@@ -33,7 +42,15 @@
     color: #FFF;
     text-shadow: 2px 2px 3px #000;
     margin-left: 30px;
+  }
+
+  .titleSigs {
     display: none;
+  }
+
+  .singUp .logo {
+    padding-bottom: 30px;
+    text-align: left;
   }
 
   figure:last-child {
@@ -47,13 +64,16 @@
   input[type="text"],
   input[type="password"],
   input[type="email"]{
-    margin: 10px 0;
+    margin: 0 0 20px 0;
+    padding: 0;
     background: transparent;
     border:none;
     border-bottom: solid 1px #FFF;
     color: #FFF;
-    -webkit-text-fill-color: #FFF !important; //Muda a cor do texto do formulário em autocomplete
-
+    width: 100%;
+    min-width: 250px;
+    height: 1.5em;
+    -webkit-text-fill-color: #AAA !important; //Muda a cor do texto do formulário em autocomplete
   }
 
   .login input:-webkit-autofill,
@@ -61,7 +81,7 @@
   .login input:-webkit-autofill:focus,
   .login input:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s;
-    box-shadow: 0px 0px;
+    box-shadow: 0px 0px #37c945;
     -webkit-writing-mode: none;
   }
 
@@ -75,15 +95,32 @@
     box-shadow: 2px 2px 10px #000;
   }
 
+  label {
+    color: #FFF;
+    width: 100%;
+    text-align: left;
+  }
+
+  .blockForm {
+    width: 350px;
+  }
+
   @media only screen and (min-width:840px){
     .login {
       position: absolute;
       right: 0;
     }
+    .singUp form {
+      display: flex;
+      justify-content: space-between;
+    }
+    .singUp {
+      max-width: 800px;
+    }
   }
 
   @media only screen and (min-width:1010px){
-    h1{
+    .titleSigs {
       display: block;
       position: absolute;
       bottom: 10px;
