--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -17,10 +17,36 @@
   <body>
 
     <% if current_user %>
-      <main class="col-sm-9" style="background-color:blue">
-        <%= yield %>
-      </main>
+      <div class="myContainer">
+        <header class="navbar-default myNav">
+          <figure class="logo"><%= image_tag("sigs_logo") %></figure>
 
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+
+          <ul class="nav navbar-nav">
+            <li><a href="#">Turmas</a></li>
+            <li><a href="#">Salas</a></li>
+            <li><a href="#">Alocações</a></li>
+            <li class="dropdown">
+              <a data-toggle="collapse" href="#demo">Usuários
+                <ul class="collapse" id="demo">
+                  <li><a href="#">Cadastros Pendentes</a></li>
+                  <li><a href="#">Usuários Registrados</a></li>
+                </ul>
+              </li>
+          </ul>
+
+          <figure class="unbLogo"><a href="http://www.unb.br"><%= image_tag("rodape_unb") %></a></figure>
+        </header>
+        <main class="mainConteiner">
+          <%= yield %>
+        </main>
+      </div>
     <% else %>
       <main class="container container-fluid myContainer" id="signIn">
         <%= yield %>
