--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <body>
 
     <% if current_user %>
-      <div class="myContainer">
+      <div class="container container-fluid myContainer">
         <header class="navbar-default myNav">
           <figure class="logo"><%= image_tag("sigs_logo") %></figure>
 
@@ -29,9 +29,10 @@
 					</button>
 
           <ul class="nav navbar-nav">
+            <li><%= link_to "Minha Conta", user_edit_path %></li>
+            <li><a href="#">Logout</a></li>
             <li><a href="#">Turmas</a></li>
             <li><a href="#">Salas</a></li>
-            <li><a href="#">Alocações</a></li>
             <li class="dropdown">
               <a data-toggle="collapse" href="#demo">Usuários
                 <ul class="collapse" id="demo">
@@ -39,6 +40,7 @@
                   <li><a href="#">Usuários Registrados</a></li>
                 </ul>
               </li>
+            <li><a href="#">Alocações</a></li>
           </ul>
 
           <figure class="unbLogo"><a href="http://www.unb.br"><%= image_tag("rodape_unb") %></a></figure>
