--- a/SIGS/app/assets/stylesheets/style.scss
+++ b/SIGS/app/assets/stylesheets/style.scss
@@ -23,6 +23,10 @@
   margin: 60px 0;
 }
 
+.container {
+  width: 98vw !important;
+}
+
 .container.container-fluid .mainConteiner {
   color: #1c1c20;
   margin-bottom: 100px;
@@ -44,6 +48,36 @@
 
 .alignEnd {
   align-items: flex-end;
+}
+
+.alertContainer {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  float: right;
+}
+.alert.alert-success,
+.alert.alert-notice,
+.alert.alert-error{
+  border-radius:0;
+  color:#FFF;
+  box-shadow: 2px 2px 10px #777;
+  padding:10px;
+  margin: 0;
+  margin-bottom: 10px;
+  border: none;
+}
+
+.alert.alert-success {
+  background: #73d97d;
+}
+
+.alert.alert-notice {
+  background: #388de2;
+}
+
+.alert.alert-error {
+  background: #e23838;
 }
 
 /* Fontes */
