--- a/SIGS/app/views/user/show.html.erb
+++ b/SIGS/app/views/user/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Bem vindo <%= @user.name %>
+<h1> <%= @user.name  %></h1>
+  <% case type(current_user)[:level]%>
+   <% when 1 %>
+   <%= render partial: "user/coordinator_show",
+        locals: {user: @user} %>
+   <% when 2 %>
+   <%= render partial: "user/department_assistant_show",
+        locals: {user: @user} %>
+    <% when 3 %>
+    <%= render partial: "user/administrative_assistant_show",
+         locals: {user: @user} %>
+    <% end %>
 <%= link_to 'Logout', sign_out_path, method: "delete" %>
