--- a/SIGS/app/views/administrative_assistant/index_users.html.erb
+++ b/SIGS/app/views/administrative_assistant/index_users.html.erb
@@ -1,19 +1,21 @@
-<table>
-  <tr>
-    <th>Nome</th>
-    <th>Email</th>
-    <th>CPF</th>
-    <th>Matricula</th>
-  </tr>
+<h1>Usuários Registrados</h1>
+
+<table class="table">
+    <tr>
+      <th>Nome</th>
+      <th>Email</th>
+      <th>CPF</th>
+      <th>Matricula</th>
+    </tr>
 <% @users.each do |user| %>
   <tr>
     <td><%= user.name%></td>
     <td><%= user.email%></td>
     <td><%= user.cpf %></td>
     <td><%= user.registration %></td>
-    <td><%= link_to 'editar' , edit_users_path(user.id)%> </td>
-    <td><%= link_to 'apagar' , destroy_users_path(user.id)%> </td>
+    <td><%= link_to image_tag("icon_edit") , edit_users_path(user.id)%></td>
 
+    <td><%= link_to image_tag("icon_trash") , destroy_users_path(user.id)%> </td>
   </tr>
 <% end %>
 </table>
