--- a/SIGS/app/assets/stylesheets/singIn.scss
+++ b/SIGS/app/assets/stylesheets/singIn.scss
@@ -44,6 +44,11 @@
     margin-left: 30px;
   }
 
+  .singUp h1{
+    margin-bottom: 0;
+    text-align: right;
+  }
+
   .titleSigs {
     display: none;
   }
@@ -104,6 +109,26 @@
   .blockForm {
     width: 350px;
   }
+
+  #erro-message {
+    color: #AAA;
+    text-align: left;
+    padding: 10px;
+    column-count: 2;
+    list-style: none;
+    font-style: italic;
+    border-bottom: 1px red;
+  }
+
+  #erro-message > li {
+  }
+
+  #dropdown-group,
+  #dropdown-group > div {
+    min-height: 30px;
+    z-index: 100;
+  }
+
 
   @media only screen and (min-width:840px){
     .login {
