--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
               <a data-toggle="collapse" href="#demo">Usuários
                 <ul class="collapse" id="demo">
                   <li><a href="#">Cadastros Pendentes</a></li>
-                  <li><%= link_to "Usuários Registrados", user_index_path(current_user.id) %></li>
+                  <li><%= link_to "Usuários Registrados", user_index_path %></li>
                 </ul>
               </li>
             <li><a href="#">Alocações</a></li>
