Update user controller and view

--- a/SIGS/app/views/user/show.html.erb
+++ b/SIGS/app/views/user/show.html.erb
@@ -1,5 +1,5 @@
 <h1> <%= @user.name  %></h1>
-  <% case type(current_user)[:level]%>
+  <% case permission[:level]%>
    <% when 1 %>
    <%= render partial: "user/coordinator_show",
         locals: {user: @user} %>
