--- a/SIGS/app/views/user/edit.html.erb
+++ b/SIGS/app/views/user/edit.html.erb
@@ -19,7 +19,7 @@
         <%= user.password_field :password, class: "form-control", placeholder: "Digite sua senha" %><br>
 
         <label for="confirm_password">Confirmar Senha: </label>
-        <input type="text" name="confirm_password" id="confirm_password" class= "form-control" placeholder= "Digite sua senha"/>
+        <input type="password" name="confirm_password" id="confirm_password" class= "form-control" placeholder= "Digite sua senha"/>
 
         <div class="actions">
           <%= user.submit "Salvar", class: "pull-right btn btn-default btn-success" %>
