--- a/SIGS/app/assets/stylesheets/singIn.scss
+++ b/SIGS/app/assets/stylesheets/singIn.scss
@@ -42,11 +42,12 @@
     color: #FFF;
     text-shadow: 2px 2px 3px #000;
     margin-left: 30px;
+    margin-bottom: 10px;
   }
 
   .singUp h1{
-    margin-bottom: 0;
     text-align: right;
+    margin-bottom: 0;
   }
 
   .titleSigs {
