--- a/SIGS/app/assets/stylesheets/style.scss
+++ b/SIGS/app/assets/stylesheets/style.scss
@@ -23,7 +23,7 @@
   margin: 60px 0;
 }
 
-.container {
+.container.container.container-fluid.myContainer:not(#signIn) {
   width: 98vw !important;
 }
 
@@ -54,6 +54,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 10px;
+  width: 250px;
   float: right;
 }
 .alert.alert-success,
@@ -66,6 +67,8 @@
   margin: 0;
   margin-bottom: 10px;
   border: none;
+  width: 250px;
+  z-index: 100;
 }
 
 .alert.alert-success {
