--- a/SIGS/app/views/user/index.html.erb
+++ b/SIGS/app/views/user/index.html.erb
@@ -1,14 +1,21 @@
-<table>
-  <tr>
-    <th>Nome</th>
-    <th>Email</th>
-    <th>Tipo</th>
-  </tr>
+<h1>Usuários Registrados</h1>
+
+<table class="table">
+    <tr>
+      <th>Nome</th>
+      <th>Email</th>
+      <th>CPF</th>
+      <th>Matricula</th>
+    </tr>
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.name          %></td>
-    <td><%= user.email      %></td>
-    <td><%= type(user)[ :type ]%></td>
+    <td><%= user.name%></td>
+    <td><%= user.email%></td>
+    <td><%= user.cpf %></td>
+    <td><%= user.registration %></td>
+    <td><%= link_to image_tag("icon_edit") , user_edit_path(user.id)%></td>
+
+    <td><%= link_to image_tag("icon_trash") , user_destroy_path(user.id)%> </td>
   </tr>
 <% end %>
 </table>
