Approve users view

--- a/SIGS/app/views/administrative_assistant/registration_request.html.erb
+++ b/SIGS/app/views/administrative_assistant/registration_request.html.erb
@@ -2,14 +2,12 @@
 <% if @users.count == 0 %>
   <h3>Não há nenhuma solitação pendente no momento.</h3>
 <% else %>
-  <table border="1" class="table">
+  <table class="table">
     <tr>
       <th>Nome</th>
       <th>Registro</th>
       <th>CPF</th>
       <th>E-mail</th>
-      <th>Ações</th>
-      <th></th>
     </tr>
   <% @users.each do |user| %>
     <tr>
@@ -17,8 +15,8 @@
       <td><%= user.registration %></td>
       <td><%= user.cpf %></td>
       <td><%= user.email %></td>
-      <td><%= link_to 'Aprovar', enable_registration_path(user.id) %></td>
-      <td><%= link_to 'Recusar', decline_registration_path(user.id) %></td>
+      <td><%= link_to image_tag('approve'), enable_registration_path(user.id) %></td>
+      <td><%= link_to image_tag('recuse'), decline_registration_path(user.id) %></td>
     </tr>
   <% end %>
   </table>
