--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
             <li class="dropdown">
               <a data-toggle="collapse" href="#demo">Usuários
                 <ul class="collapse" id="demo">
-                  <li><a href="#">Cadastros Pendentes</a></li>
+                  <li><%= link_to "Cadastros Pendentes", registration_request_path %></li>
                   <li><%= link_to "Usuários Registrados", user_index_path %></li>
                 </ul>
               </li>
