--- a/SIGS/app/views/user/index.html.erb
+++ b/SIGS/app/views/user/index.html.erb
@@ -13,7 +13,7 @@
     <td><%= user.email%></td>
     <td><%= user.cpf %></td>
     <td><%= user.registration %></td>
-    <td><%= link_to image_tag("icon_edit") , user_edit_path(user.id)%></td>
+    <td><%= link_to image_tag("icon_edit") , user_edit_path(user.id), confirm: "Tem certeza?" %></td>
 
     <td><%= link_to image_tag("icon_trash") , user_destroy_path(user.id)%> </td>
   </tr>
