--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -33,13 +33,15 @@
             <li><%= link_to 'Logout', sign_out_path, method: "delete" %></li>
             <li><a href="#">Turmas</a></li>
             <li><a href="#">Salas</a></li>
-            <li class="dropdown">
-              <a data-toggle="collapse" href="#demo">Usuários
-                <ul class="collapse" id="demo">
-                  <li><%= link_to "Cadastros Pendentes", registration_request_path %></li>
-                  <li><%= link_to "Usuários Registrados", user_index_path %></li>
-                </ul>
-              </li>
+            <% if permission[:level] == 3 %>
+              <li class="dropdown">
+                <a data-toggle="collapse" href="#demo">Usuários
+                  <ul class="collapse" id="demo">
+                    <li><%= link_to "Cadastros Pendentes", registration_request_path %></li>
+                    <li><%= link_to "Usuários Registrados", user_index_path %></li>
+                  </ul>
+                </li>
+            <% end %>
             <li><a href="#">Alocações</a></li>
           </ul>
 
